/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_package = "com.dremio.service.job.log";
option optimize_for = SPEED;
option java_multiple_files = true;
option java_outer_classname = "LoggedQueryProtobuf";

package dremio.job.log;

message LoggedQuery {
  string query_id = 1;
  string context = 2;
  string query_text = 3;
  int64 start = 4;
  int64 finish = 5;
  JobState outcome = 6;
  string outcome_reason = 7;
  string username = 8;
}

// Copy of Jobstate from JobInfo. - job.proto #JobState
enum JobState {
  NOT_SUBMITTED = 0; // job still with DAC not yet submitted.
  STARTING = 1;
  RUNNING = 2;
  COMPLETED = 3;
  CANCELED = 4;
  FAILED = 5;
  CANCELLATION_REQUESTED = 6;
  ENQUEUED = 7;
  PLANNING = 8;
  PENDING = 9;
  METADATA_RETRIEVAL = 10;
  QUEUED = 11;
  ENGINE_START = 12;
  EXECUTION_PLANNING = 13;
  INVALID_STATE = 14;
}
